Minor fix for navigation close button on mobile

--- a/src/styles/components/topbar.scss
+++ b/src/styles/components/topbar.scss
@@ -111,6 +111,7 @@
     }
 
     .topbar-toggle {
+        z-index: 1000;
         width: var(--space-lm);
         height: calc(var(--space-lm));
 
